# tartanair_tools

./: .gitignore  CMakeLists.txt  download_training.py
src/: aug.sh  augmentation.cpp  augmentation.py
